hero section updated

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     </header>
 
     <section class="hero">
+        <div class="slideshow"></div>
+
         <div class="hero-inner">
             <h1>
                 Welcome to my Profile
@@ -56,7 +58,7 @@
 
 
 
-    <section class="about">
+    <!-- <section class="about">
 
         <h1 class="about">About Me</h1>
 
@@ -67,7 +69,7 @@
             
             My technical acumen, combined with my passion for problem-solving and my commitment to professional growth, drives me to take on new challenges and continuously refine my skills. I am excited to apply my knowledge, work alongside innovative teams, and make meaningful contributions in the world of software development.
         </p>
-    </section>
+    </section> -->
 
 
     <script src="script.js"></script>
