--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Welcome to my Profile
             </h1>
 
-            <h2> I'm Siyabonga Ngwenyama</h2>
+            <h3> I'm Siyabonga Ngwenyama</h3>
 
             <p> a passionate software developer who loves creating user-friendly and innovative applications. 
                 With a strong background in coding and a knack for problem-solving, 
@@ -58,7 +58,7 @@
 
 
 
-    <!-- <section class="about">
+    <section class="about">
 
         <h1 class="about">About Me</h1>
 
@@ -69,7 +69,7 @@
             
             My technical acumen, combined with my passion for problem-solving and my commitment to professional growth, drives me to take on new challenges and continuously refine my skills. I am excited to apply my knowledge, work alongside innovative teams, and make meaningful contributions in the world of software development.
         </p>
-    </section> -->
+    </section>
 
 
     <script src="script.js"></script>
