background images brightness changes

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
             <h3> I'm Siyabonga Ngwenyama</h3>
 
-            <p> a passionate software developer who loves creating user-friendly and innovative applications. 
+            <p> Hey There, I'm software developer who loves creating user-friendly and innovative applications. 
                 With a strong background in coding and a knack for problem-solving, 
                 I enjoy working on exciting projects that push the boundaries of technology.
-                I thrive in team settings and am always eager to learn new things and take on new challenges.
+                I thrive in team settings and I'm always eager to learn new things and take on new challenges.
                 My goal is to contribute to projects that make a real difference in people's lives. 
             </p>
         </div>
