updated css and html, naming conventions

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siyabonga Ngwenyama</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -11,70 +10,96 @@
 
 <body>
 
-    <header class="header">
-        <a href="#home"class= "logo">Siyabonga Ngwenyama</a>
-        <nav class="navbar">
-            <a href="#home"class="active">Home</a>
-            <a href="#projects">Projects</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-    </nav>
+    <!-- Navbar -->
+    <header class="navbar">
+        <div class="container">
+
+            <div class="logo-container">
+                <a href="#home" class="logo">Siyabonga Ngwenyama</a>
+            </div>
+
+            <div class="nav-container">
+                <nav class="nav-links">
+                <a href="#home" class="active">Home</a>
+                <a href="#projects">Projects</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </nav></div>
+
+
+        </div>
     </header>
 
-    <section class="hero">
-        <div class="slideshow"></div>
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="container">
+            <div class="slideshow"></div>
 
-        <div class="hero-inner">
-            <h1>
-                Welcome to my Profile
-            </h1>
+            <div class="hero-content">
+                <h1>Welcome to My Profile
+                </h1>
+                <h3>I'm Siyabonga Ngwenyama</h3>
+                <p>
+                    A software developer who loves creating user-friendly and innovative applications. 
+                    With a strong background in coding and a knack for problem-solving, I enjoy working on exciting projects that push the boundaries of technology.
+                    I thrive in team settings and I'm always eager to learn new things and take on new challenges.
+                    My goal is to contribute to projects that make a real difference in people's lives.
+                </p>
 
-            <h3> I'm Siyabonga Ngwenyama</h3>
+                <div class="social-icons">
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                    <a href="#"><i class='bx bxl-github'></i></a>            
+                </div>
 
-            <p> Hey There, I'm software developer who loves creating user-friendly and innovative applications. 
-                With a strong background in coding and a knack for problem-solving, 
-                I enjoy working on exciting projects that push the boundaries of technology.
-                I thrive in team settings and I'm always eager to learn new things and take on new challenges.
-                My goal is to contribute to projects that make a real difference in people's lives. 
+                <div class="btn-group">
+                    <a href="#about" class="btn">About Me</a>
+                    <a href="#contact" class="btn">Contact Me</a>
+                </div>
+
+                <!-- <div class="hero-image">
+                    <img src="image.jpeg" alt="Profile Image">
+                </div> -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Tech Stack Section -->
+    <section class="tech-stack">
+        <div class="container">
+            <h1>Tech Stack</h1>
+            <div class="stack-icons">
+                <a href="#"><i class='bx bxl-git'></i></a>
+                <a href="#"><i class='bx bxl-java'></i></a>
+                <a href="#"><i class='bx bxl-python'></i></a>
+                <a href="#"><i class='bx bxl-html5'></i></a>
+                <a href="#"><i class='bx bxl-css3'></i></a>
+                <a href="#"><i class='bx bxl-firebase'></i></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Me Section -->
+    <section class="about" id="about">
+        <div class="container">
+            <h1>About Me</h1>
+            <p>
+                I am a passionate and driven software developer with a strong foundation in mathematics and computer science. 
+                My journey into technology began with a deep love for learning and problem-solving, which initially led me to a career in teaching. 
+                There, I developed the ability to break down complex concepts and collaborate effectively—skills that continue to shape my approach to software development.
+            </p>
+            <p>
+                Eager to expand my technical expertise, I transitioned into the world of programming through WeThinkCode_, where I immersed myself in hands-on projects and honed my analytical thinking. 
+                Through experiences like Robot Worlds and Code Clinics, I thrived in team-driven environments that emphasized collaboration, adaptability, and continuous learning. 
+                Working on these projects strengthened my ability to navigate agile methodologies, communicate effectively, and contribute meaningfully to team objectives.
+            </p>
+            <p>
+                My technical acumen, combined with my passion for problem-solving and my commitment to professional growth, drives me to take on new challenges and continuously refine my skills. 
+                I am excited to apply my knowledge, work alongside innovative teams, and make meaningful contributions in the world of software development.
             </p>
         </div>
-
-        <div class="social-icons">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>            
-        </div>
-
-        <div class="btn-group">
-            <a href="#about me link here" class="btn">About Me</a>
-            <a href="#contact me link here" class="btn">Contact Me</a>
-        </div>
-
-        <div class="home-img">
-            <img src="image.jpeg" alt="">
-        </div>
     </section>
 
-
-
-
-
-    <section class="about">
-
-        <h1 class="about">About Me</h1>
-
-        <p>
-            I am a passionate and driven software developer with a strong foundation in mathematics and computer science. My journey into technology began with a deep love for learning and problem-solving, which initially led me to a career in teaching. There, I developed the ability to break down complex concepts and collaborate effectively—skills that continue to shape my approach to software development.
-            
-            Eager to expand my technical expertise, I transitioned into the world of programming through WeThinkCode_, where I immersed myself in hands-on projects and honed my analytical thinking. Through experiences like Robot Worlds and Code Clinics, I thrived in team-driven environments that emphasized collaboration, adaptability, and continuous learning. Working on these projects strengthened my ability to navigate agile methodologies, communicate effectively, and contribute meaningfully to team objectives.
-            
-            My technical acumen, combined with my passion for problem-solving and my commitment to professional growth, drives me to take on new challenges and continuously refine my skills. I am excited to apply my knowledge, work alongside innovative teams, and make meaningful contributions in the world of software development.
-        </p>
-    </section>
-
-
+    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
-
-
-
 </html>
