added footer to website

--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
 
     </section>
 
-
     <section class="contact-section" id="contact">
         <div class="contact-container">
 
@@ -215,7 +214,11 @@
             </div>
         </div>
 
-    </section>
+    </section>   
+
+    <footer>
+        <p>Copyright &#169; 2025 @Siyabonga Ngwenyama. All Rights Reserved.</p>
+    </footer>
 
     <!-- JavaScript -->
     <script src="script.js"></script>
