added git and live buttons

--- a/index.html
+++ b/index.html
@@ -140,11 +140,6 @@
         </div>
     </section>
 
-    <!-- project = projects-section
-    heading projects-heading = heading projects-header
-    project-content = project-img-container
-    project = projects -->
-
 
     <section class="projects-section" id="projects">
         <h2 class="heading projects-header">Projects</h4>
@@ -168,7 +163,14 @@
                 </div>
 
                 <div class="project-link-container">
-                    <a href="link"></a>
+                    <div class="project-buttons">
+                        <a href="https://github.com/your-repo-link" target="_blank" class="btn github-btn">
+                            <i class='bx bxl-github'></i> GitHub
+                        </a>
+                        <a href="https://your-live-demo-link.com" target="_blank" class="btn live-btn">
+                            <i class='bx bx-link-external'></i> Live Demo
+                        </a>
+                    </div>
                 </div>   
                
             </div>
@@ -183,7 +185,14 @@
                     <p>Robot Worlds is a software simulation project where multiple virtual robots.</p>
                 </div>
                 <div class="project-link-container">
-                    <a href="link"></a>
+                    <div class="project-buttons">
+                        <a href="https://github.com/your-repo-link" target="_blank" class="btn github-btn">
+                            <i class='bx bxl-github'></i> GitHub
+                        </a>
+                        <a href="https://your-live-demo-link.com" target="_blank" class="btn live-btn">
+                            <i class='bx bx-link-external'></i> Live Demo
+                        </a>
+                    </div>
                 </div>
             </div>
 
