--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Navbar -->
     <header>
         <nav class="navbar">
+            <div class="overlay"></div>
+
             <div class="logo">
                 <a href="#home" class="logo">Siyabonga Ngwenyama</a>
             </div>
@@ -37,7 +39,7 @@
 
     <!-- Hero Section -->
 
-    <section class="home">
+    <section class="home" id="home">
         <div class="home-content">
             <div class="slideshow"></div>
 
@@ -116,18 +118,14 @@
             <div class="about-text">
 
                     <p  class="text" style="padding-top: 30px;">
-                        I’m <strong style="color: inherit;">Siyabonga Ngwenyama</strong>!, a passionate and results-driven software developer with a strong foundation in full-stack development. 
+                        I’m <strong style="color: inherit;">Siyabonga Ngwenyama</strong>, a passionate and results-driven software developer with a strong foundation in full-stack development. 
                         I have experience building and optimizing web applications, APIs, and database-driven systems using Java, Python, JavaScript, and SQL. 
                         My recent projects include developing a robot simulation world using Javalin and SQLite, integrating unit testing (JUnit, Mockito), 
                         and streamlining deployments with Docker and GitLab CI/CD.
-                    </p>
                     <br>
-                    <p class="text">I thrive in collaborative environments, leveraging Git for version control and following agile development practices to deliver high-quality software. 
+                        I thrive in collaborative environments, leveraging Git for version control and following agile development practices to deliver high-quality software. 
                         Beyond technical expertise, my background in teaching, leadership, and technical support has shaped me into a strong communicator and problem-solver.
-                    </p> 
-
                     <br>
-                    <p class="text">
                         I’m eager to contribute to innovativeb projects where I can apply my skills, continue learning, and make an impact. Let’s connect and build something great!
                     </p>
 
@@ -149,8 +147,9 @@
 
             <div class="projects">
 
+
                 <div class="project-img-container">
-                    <img class="project-img" src="images/projects/laptop.jpg" alt="">
+                    <img class="project-img" src="images/projects/laptop.jpg" alt="personal portfoilio">
                 </div>
 
 
@@ -164,7 +163,7 @@
 
                 <div class="project-link-container">
                     <div class="project-buttons">
-                        <a href="https://github.com/your-repo-link" target="_blank" class="btn github-btn">
+                        <a href="https://github.com/Siyabonga23/My-portfolio" target="_blank" class="btn github-btn">
                             <i class='bx bxl-github'></i> GitHub
                         </a>
                         <a href="https://your-live-demo-link.com" target="_blank" class="btn live-btn">
@@ -186,7 +185,28 @@
                 </div>
                 <div class="project-link-container">
                     <div class="project-buttons">
-                        <a href="https://github.com/your-repo-link" target="_blank" class="btn github-btn">
+                        <a href="https://gitlab.wethinkco.de/smoyeni023/cpt15_robot_worlds" target="_blank" class="btn github-btn">
+                            <i class='bx bxl-github'></i> GitLab
+                        </a>
+                        <a href="https://your-live-demo-link.com" target="_blank" class="btn live-btn">
+                            <i class='bx bx-link-external'></i> Live Demo
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projects">
+                <div class="project-img-container">
+                    <img class="project-img" src="images/projects/fitquest2.jpg" alt="Robot World">
+                </div>
+
+                <div class="projects-pair">
+                    <h3 class="prject-name">FitQuest</h3>
+                    <p>FitQuest is a flutter developed app designed to be user friendly and easier to use </p>
+                </div>
+                <div class="project-link-container">
+                    <div class="project-buttons">
+                        <a href="https://github.com/Siyabonga23/FitQuest" target="_blank" class="btn github-btn">
                             <i class='bx bxl-github'></i> GitHub
                         </a>
                         <a href="https://your-live-demo-link.com" target="_blank" class="btn live-btn">
@@ -195,6 +215,29 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="projects">
+                <div class="project-img-container">
+                    <img class="project-img" src="images/projects/todo2.jpg" alt="todo app">
+                </div>
+
+                <div class="projects-pair">
+                    <h3 class="prject-name">Task App</h3>
+                    <p>Todo site is a flask,python developed.</p>
+                </div>
+                <div class="project-link-container">
+                    <div class="project-buttons">
+                        <a href="https://github.com/Siyabonga23/task-app" target="_blank" class="btn github-btn">
+                            <i class='bx bxl-github'></i> GitHub
+                        </a>
+                        <a href="https://your-live-demo-link.com" target="_blank" class="btn live-btn">
+                            <i class='bx bx-link-external'></i> Live Demo
+                        </a>
+                    </div>
+                </div>
+            </div>
+
 
 
         </div>
