--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 
                 <div class="projects-pair">
                     <h3 class="prject-name">FitQuest</h3>
-                    <p>FitQuest is a flutter developed app designed to be user friendly and easier to use </p>
+                    <p>FitQuest is a gamified fitness tracker that helps users set goals, 
+                        track workouts, and join challenges. </p>
                 </div>
                 <div class="project-link-container">
                     <div class="project-buttons">
@@ -224,7 +225,8 @@
 
                 <div class="projects-pair">
                     <h3 class="prject-name">Task App</h3>
-                    <p>Todo site is a flask,python developed.</p>
+                    <p>TaskMaster App is a Flask-based to-do list for adding, updating, 
+                        and deleting tasks with an SQLite database.</p>
                 </div>
                 <div class="project-link-container">
                     <div class="project-buttons">
