Personal Portfolio fixed

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                 <div class="projects-pair">
 
-                    <h3 class="project-name">personal portfoilio</h3>
+                    <h3 class="project-name">Personal Portfolio</h3>
                         
                     <p>This project is a personal portfolio website designed to showcase my skills. 
                     </p>
